--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "TelemetryDatabase_2023"]
 	path = TelemetryDatabase_2023
 	url = https://github.com/LonghornRacingElectric/TelemetryDatabase_2023.git
+[submodule "WheelspeedController2023"]
+	path = WheelspeedController2023
+	url = https://github.com/LonghornRacingElectric/WheelspeedController2023.git
